Development Portal (2019-03-18 shi)
==============================
Display non-DAC sectors in SAVi
Update print-friendly css
Import sector_vocab in iati_codes.js


Development Portal (2019-01-18 shi)
==============================
Resize country and sector bar graphs
Update print-friendly css
Update Inspire theme legend css


Development Portal (2019-01-18 shi)
==============================
CSS updates to links, faq in footer and header
Update css and text for beta info in footer


Development Portal (2019-01-14 shi)
==============================
Remove dates for transaction graphs
CSS fix for humanitarian-scope
Update print-friendly css
Import example.xml for testing (AA-AAA-123456789-ABC123)


Development Portal (2019-01-11 shi)
==============================
Add legend to individual transaction graphs in SAVi
Update print-friendly css


Development Portal (2019-01-10 shi)
==============================
Update print-friendly css for new graphs
Update all themes css with new graphs and iati-identifier section
Fix padding for new graphs in SAVi
Fix last of type padding for sector graphs with dac vocab
Update hide toggles for transaction
Don't display baseline outside of correct hierarchy in results
Add legend to new graphs
Update print-friendly css with new legend
Display 2-digit country code in new recipient-country graph


Development Portal (2019-01-08 shi)
==============================
Display sector codes in graph
Add new recipient-country graph
Update new graphs css, remove old graph code
Show withdrawn status in sector graphs for SAVi
Add whitespace no-wrap for overflowing value in new graphs


Development Portal (2019-01-07 shi)
==============================
Start on new graphs to replace sector and countries in SAVi


Development Portal (2019-01-06 shi)
==============================
Add transaction-type count and hide buttons
Update colours for chart lines of transaction-type
Add blank tags for missing columns in planned-disbursement