@@ -3,6 +3,8 @@ Development Portal (2019-03-18 shi)
 Display non-DAC sectors in SAVi
 Update print-friendly css
 Import sector_vocab in iati_codes.js
+Fix close span for non-DAC sector section
+Update length of sectors with DAC
 
 
 Development Portal (2019-01-18 shi)
